force-app/main/default/objects/Expense_Line_Item__c.object
<CustomObject>
<fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Kristina</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</fields>
</CustomObject>