force-app/main/default/objects/Expense_Line_Item__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The billing contact who will be charged for this payment.</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This contact is inactive.</errorMessage>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Propeller Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses (Billing Contact)</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>