force-app/main/default/objects/Expense_Line_Item__c/fields/Compensation_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation Is Paid</label>
    <type>Checkbox</type>
</CustomField>