force-app/main/default/objects/Expense_Line_Item__c/fields/Compensation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation Needed?</label>
    <type>Checkbox</type>
</CustomField>