force-app/main/default/objects/Expense_Line_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date when purchase / spent was made.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>