force-app/main/default/objects/Expense_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Short description.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>