force-app/main/default/objects/Expense_Line_Item__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense Category</label>
    <referenceTo>Expense_Category__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>