force-app/main/default/objects/Expense_Line_Item__c/fields/Guest_Total__c.field-meta.xml
<CustomField>
    <fullName>Guest_Total__c</fullName>
    <formula>Total__c /  Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>