force-app/main/default/objects/Expense_Line_Item__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Igor Petrovich</fullName>
            </value>
            <value>
                <fullName>Slava Brezovsky</fullName>
            </value>
            <value>
                <fullName>Vladislav Khrapski</fullName>
            </value>
            <value>
                <fullName>Evgeny Kurtnizirov</fullName>
            </value>
            <value>
                <fullName>Olya Platonova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>