force-app/main/default/objects/Expense_Line_Item__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Payable</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>