force-app/main/default/objects/Expense_Line_Item__c/fields/Is_Loan__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loan</label>
    <type>Checkbox</type>
</CustomField>