force-app/main/default/objects/Expense_Line_Item__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>