force-app/main/default/objects/Expense_Line_Item__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <inlineHelpText>Person responsible for current spent / purchase.</inlineHelpText>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Propeller Plan</value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>