force-app/main/default/objects/Expense_Line_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <inlineHelpText>Spent / purchase value.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>