force-app/main/default/objects/Expense_Line_Item__c/fields/Trigger_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the logic of data recalculation in contacts</description>
    <inlineHelpText>Disable the logic of data recalculation in contacts</inlineHelpText>
    <label>Trigger Inactive</label>
    <type>Checkbox</type>
</CustomField>