force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Education.recordType-meta.xml
<RecordType>
    <fullName>Education</fullName>
    <active>false</active>
    <description>Courses, Certification, Books, Trainings and Conferences</description>
    <label>Education</label>
</RecordType>