force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Entertainment.recordType-meta.xml
<RecordType>
    <fullName>Entertainment</fullName>
    <active>false</active>
    <description>Activities, TBs, theaters, mzgb, etc.</description>
    <label>Entertainment</label>
</RecordType>