force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Gifts.recordType-meta.xml
<RecordType>
    <fullName>Gifts</fullName>
    <active>false</active>
    <description>BDs gifts, gifts for Clients, etc.</description>
    <label>Gifts</label>
</RecordType>