force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Lunch.recordType-meta.xml
<RecordType>
    <fullName>Lunch</fullName>
    <active>false</active>
    <description>Lunches</description>
    <label>Lunch</label>
</RecordType>