force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>false</active>
    <description>Software licenses payments, services payments etc.</description>
    <label>Maintenance</label>
</RecordType>