force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Medicine.recordType-meta.xml
<RecordType>
    <fullName>Medicine</fullName>
    <active>false</active>
    <description>Medicine, analysis, etc.</description>
    <label>Medicine</label>
</RecordType>