force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>false</active>
    <description>Office maintenance, purchases, rent, goods and coffee, etc.</description>
    <label>Office</label>
</RecordType>