force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Taxes.recordType-meta.xml
<RecordType>
    <fullName>Taxes</fullName>
    <active>false</active>
    <description>Taxes, Social Protection Fund fee, etc.</description>
    <label>Taxes</label>
</RecordType>