force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Trips.recordType-meta.xml
<RecordType>
    <fullName>Trips</fullName>
    <active>false</active>
    <description>Business trips spends, visa support, etc.</description>
    <label>Trips</label>
</RecordType>